Uppdaterad med SRBR-frekvenser

--- a/rhb.tex
+++ b/rhb.tex
@@ -4,7 +4,8 @@
 \usepackage{longtable}
 \usepackage[a5paper,textwidth=12cm,textheight=17cm]{geometry}
 \begin{document}
-\title{Handbok för Radiooperatörer}
+\title{Handbok för Radiooperatörer\\
+VHF/UHF}
 \author{SM0UEI}
 \maketitle
 
@@ -14,6 +15,8 @@ Handbok för radiooperatörer innehåller diverse matnyttig information för ama
 Skriv ut den på A4 med två sidor på samma papper och vik ihop till ett häfte. Ladda ner den i läsplattan eller surfplattan. Papperstypen är vald som A5 för att underlätta läsning på platta och mobiltelefon till och med.
 
 Idéer tankar, korrigeringar och annat som behöver vara med är välkommet att du skickar till anders@sikvall.se så kan jag se till att få med det i nästa utgåva. Denna bok uppdateras sporadiskt när det finns skäl och tid till detta.
+
+Till en början är det VHF och UHF men kommer så småningom utökas med fler och fler band.
 \end{abstract}
 
 \clearpage
@@ -62,15 +65,15 @@ Repeaterlistan sorteras på geografiskt namn efter var de befinner sig.
 \subsection{Klubbar}
 
 \begin{tabular}{ll|ll}
-	\textbf{Signal} & \textbf{Klubb}      & \textbf{Signal} & \textbf{Klubb}          \\\hline
-	SK5JV           & Fagersta radioklubb & SK0SSA          & Sveriges sändaramatörer
+	Signal & Klubb               & Signal & Klubb                   \\ \hline
+	SK5JV  & Fagersta radioklubb & SK0SSA & Sveriges sändaramatörer
 \end{tabular}
 
 \subsection{Militära stationer (FRO)}
 
 \begin{tabular}{ll}
-	\textbf{Signal} & \textbf{Beskrivning}       \\ \hline
-	SL5AB           & Enköpings ledningsbataljon
+	Signal & Beskrivning                \\ \hline
+	SL5AB  & Enköpings ledningsbataljon
 \end{tabular}
 
 \section{Terminologi och trafik}
@@ -97,43 +100,60 @@ Repeaterlistan sorteras på geografiskt namn efter var de befinner sig.
 	  &        & Ö & Östen   &   &
 \end{tabular}
 
-
 \subsection{Bokstaveringsalfabetet (Internationella)}
+
+--- Mer om detta här.
 
 \section{Frekvenser}
 
-\subsection{Tillståndsfria frekvenser}
+\subsection{Tillståndsfria frekvenser, ej amatörradio}
 
 Dessa frekvenser är avsedda för allmänhet eller för specifika ändamål som anges. Det innebär att de kan brukas för de ändamål som anges i PTS författningssamlingar och sammanställning över ej tillståndspliktiga frekvenser. Observera att du är skyldig att själv kontrollera bestämmelserna innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.\\
 
 \begin{tabular}{rlrl}
-	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline
-	        155,42500 & Jakt K1            &             5 W & Jakt, Jordbruk [M]         \\
-	        155,47500 & Jakt K2            &             5 W & Jakt, Jordbruk [M]         \\
-	        155,47500 & Jakt K3            &             5 W & Jakt, Jordbruk [M]         \\
-	        155,52500 & Jakt K4            &             5 W & Jakt, Jordbruk [M]         \\
-	        156,00000 & Jakt K5            &             5 W & Jakt, Jordbruk, PMR        \\
-	        155,40000 & Jakt K6            &             5 W & Jakt, Jordbruk [M]         \\
-	        155,45000 & Jakt K7            &             5 W & Jakt, Jordbruk [M]         \\
+	Frekvens & Benämning & Effekt & Användningsområde   \\ \hline
+	 155,425 & Jakt K1   &    5 W & Jakt, Jordbruk [M]  \\
+	 155,475 & Jakt K2   &    5 W & Jakt, Jordbruk [M]  \\
+	 155,475 & Jakt K3   &    5 W & Jakt, Jordbruk [M]  \\
+	 155,525 & Jakt K4   &    5 W & Jakt, Jordbruk [M]  \\
+	 156,000 & Jakt K5   &    5 W & Jakt, Jordbruk, PMR \\
+	 155,400 & Jakt K6   &    5 W & Jakt, Jordbruk [M]  \\
+	 155,450 & Jakt K7   &    5 W & Jakt, Jordbruk [M]
 \end{tabular}
 
+Jakt K5 är öppen att användas för andra ändamål och sammanfaller ej med marina VHF-bandet vilket de andra gör.
+
 \begin{tabular}{rlrl}
-	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline
-	        446,00625 & PMR446 K1          &          500 mW & PMR                        \\
-	        446,01875 & PMR446 K2          &          500 mW & PMR                        \\
-	        446,03125 & PMR446 K3          &          500 mW & PMR                        \\
-	        446,04375 & PMR446 K4          &          500 mW & PMR                        \\
-	        446,05625 & PMR446 K5          &          500 mW & PMR                        \\
-	        446,06875 & PMR446 K6          &          500 mW & PMR                        \\
-	        446,08125 & PMR446 K7          &          500 mW & PMR                        \\
-	        446,09375 & PMR446 K8          &          500 mW & PMR
+	 Frekvens & Benämning & Effekt & Användningsområde \\ \hline
+	446,00625 & PMR446 K1 & 500 mW & PMR [N]              \\
+	446,01875 & PMR446 K2 & 500 mW & PMR [N]              \\
+	446,03125 & PMR446 K3 & 500 mW & PMR [N]              \\
+	446,04375 & PMR446 K4 & 500 mW & PMR [N]              \\
+	446,05625 & PMR446 K5 & 500 mW & PMR [N]              \\
+	446,06875 & PMR446 K6 & 500 mW & PMR [N]              \\
+	446,08125 & PMR446 K7 & 500 mW & PMR [N]              \\
+	446,09375 & PMR446 K8 & 500 mW & PMR [N]
 \end{tabular}
 
 [M] Delas med marin VHF-radio. Får därför inte användas till sjöss inom landets gränser eller i svenska territorialvatten.
 
-PMR är Personal Mobile Radio och får användas av alla. En sådan högeffektkanal finns på slaskfrekvensen 156,000 MHz som dock tyvärr väldigt ofta är utsatt för störningar.
+[N] Smalbandig FM-modulation skall användas pga tätt liggande kanaler.
+
+\begin{tabular}{rlrl}
+	Frekvens & Benämning & Effekt & Användningsområde          \\ \hline
+	 444,600 & SRBR K1   &    2 W & Short range business radio \\
+	 444,625 & SRBR K2   &    2 W & Short range business radio \\
+	 444,800 & SRBR K3   &    2 W & Short range business radio \\
+	 444,825 & SRBR K4   &    2 W & Short range business radio \\
+	 444,850 & SRBR K5   &    2 W & Short range business radio \\
+	 444,875 & SRBR K6   &    2 W & Short range business radio \\
+	 444,925 & SRBR K7   &    2 W & Short range business radio \\
+	 444,975 & SRBR K8   &    2 W & Short range business radio
+\end{tabular}
+
+SRBR är ett ej tillståndspliktigt frekvenssegment som används för yrkesmässig radiotrafik.
 
 \section{Telegrafi}
 
