--- a/rhb.tex
+++ b/rhb.tex
@@ -3,6 +3,8 @@
 \usepackage[swedish]{babel}
 \usepackage{longtable}
 \usepackage[a5paper,textwidth=12cm,textheight=17cm]{geometry}
+\usepackage{amsmath}
+
 \begin{document}
 \title{Handbok för Radiooperatörer\\
 VHF/UHF}
@@ -157,7 +159,26 @@ SRBR är ett ej tillståndspliktigt frekvenssegment som används för yrkesmäss
 
 \section{Telegrafi}
 
-\section{Radioformler}
+\section{Formler och matematik}
+
+\subsection{Ohms Lag och effektlagen}
+
+\begin{align}
+U &= R\cdot I\\
+R &= U/I\\
+I &= U/R
+\end{align}
+
+\begin{align}
+P &= U \cdot I\\
+U &= P/I\\
+I &= P/U
+\end{align}
+
+\begin{align}
+P &= U^2/R\\
+P &= R \cdot I^2
+\end{align}
 
 \subsection{Frirumsutbredning}
 
