CTCSS Tones added

--- a/rhb.tex
+++ b/rhb.tex
@@ -143,6 +143,24 @@ Jakt K5 är öppen att användas för andra ändamål och sammanfaller ej med ma
 
 [N] Smalbandig FM-modulation skall användas pga tätt liggande kanaler.
 
+På PMR446 används ibland subtoner för att skapa virtuella grupper och sub-kanaler. De som används är följande toner och frekvenser:
+
+\begin{tabular}{rr|rr|rr}
+	 1 &  67,0 & 14 & 107,2 & 27 & 167,9 \\
+	 2 &  69,3 & 15 & 110,9 & 28 & 173,8 \\
+	 3 &  74,4 & 16 & 114,8 & 29 & 179,9 \\
+	 4 &  77,0 & 17 & 118,8 & 30 & 186,2 \\
+	 5 &  79,7 & 18 & 123,0 & 31 & 192,8 \\
+	 6 &  82,5 & 19 & 127,3 & 32 & 203,5 \\
+	 7 &  85,4 & 20 & 131,8 & 33 & 210,7 \\
+	 8 &  88,5 & 21 & 136,5 & 34 & 218,1 \\
+	 9 &  91,5 & 22 & 141,3 & 35 & 225,7 \\
+	10 &  94,8 & 23 & 146,2 & 36 & 233,6 \\
+	11 &  97,4 & 24 & 151,4 & 37 & 241,8 \\
+	12 & 100,0 & 25 & 156,7 & 38 & 250,3 \\
+	13 & 103,5 & 26 & 162,2 &    &
+\end{tabular}
+
 \begin{tabular}{rlrl}
 	Frekvens & Benämning & Effekt & Användningsområde          \\ \hline
 	 444,600 & SRBR K1   &    2 W & Short range business radio \\
