--- a/rhb.tex
+++ b/rhb.tex
@@ -34,30 +34,28 @@ Till en början är det VHF och UHF men kommer så småningom utökas med fler o
 
 Sverige delas in i följande distrikt efter sina län:
 
-\footnotesize
+%\small
 \begin{tabular}{cl}
-\textbf{Dist.} & \textbf{Län}\\
-\hline
-0 & Stockholm\\
-1 & Gotland\\
-2 & Västerbotten, Norrbotten\\
-3 & Gävleborg, Jämtland, Västernorrland\\
-4 & Örebro, Värmland, Dalarna\\
-5 & Östergötland, Södermanland, Västmanland, Uppsala\\
-6 & Halland, Västra götaland\\
-7 & Skåne, Blekinge, Kronoberg, Jönköping, Kalmar\\
-8 & Speciella stationer utanför landets gränser, t.ex. militära skepp\\
+	\textbf{Dist.} & \textbf{Län}                                     \\ \hline
+	      0        & Stockholm                                        \\
+	      1        & Gotland                                          \\
+	      2        & Västerbotten, Norrbotten                         \\
+	      3        & Gävleborg, Jämtland, Västernorrland              \\
+	      4        & Örebro, Värmland, Dalarna                        \\
+	      5        & Östergötland, Södermanland, Västmanland, Uppsala \\
+	      6        & Halland, Västra götaland                         \\
+	      7        & Skåne, Blekinge, Kronoberg, Jönköping, Kalmar    \\
+	      8        & Speciella stationer utanför landets gränser
 \end{tabular}
-\normalsize
+%\normalsize
 
 \section{Repeaterlistan}
 
 Repeaterlistan sorteras på geografiskt namn efter var de befinner sig.
 
 \begin{tabular}{lllrrl}
-	\textbf{ID} & \textbf{Kommun} & \textbf{Ort} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} \\
-	\hline
-	SK7XY       & Malmö           & Malmö        &           145.625 &       -0.600 & DTMF 0
+	\textbf{ID} & \textbf{Kommun} & \textbf{Ort} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} \\ \hline
+	SK7XY       & Malmö           & Malmö        &           145.625 &         -0.600 & DTMF 0
 \end{tabular}
 
 \subsection{VHF 2m}
@@ -190,17 +188,6 @@ På PMR446 och andra band samt för ett antal repeatrar på 70cm primärt men ä
 	31 & 192,8 & 32 & 203,5 & 33 & 210,7 & 34 & 218,1 & 35 & 225,7 \\ \hline
 	36 & 233,6 & 37 & 241,8 & 38 & 250,3 &    &       &    &
 \end{tabular}
-
-
-
-
-
-
-
-
-
-
-
 
 
 
